Added CCExtractor to licenses.

--- a/distribution/licenses/Licenses by Dependency.html
+++ b/distribution/licenses/Licenses by Dependency.html
@@ -1,100 +1,102 @@
 <html>
-  <head>
+<head>
     <title>HTML License report</title>
-  </head>
-  <style>table {
-                  width: 85%;
-                  border-collapse: collapse;
-                  text-align: center;
-                }
+</head>
+<style>table {
+    width: 85%;
+    border-collapse: collapse;
+    text-align: center;
+    }
 
-                .dependencies {
-                  text-align: left;
-                  width:30%;
-                }
+    .dependencies {
+    text-align: left;
+    width:30%;
+    }
 
-                tr {
-                  border: 1px solid black;
-                }
+    tr {
+    border: 1px solid black;
+    }
 
-                td {
-                  border: 1px solid black;
-                  font-weight: bold;
-                  color: #2E2E2E
-                }
+    td {
+    border: 1px solid black;
+    font-weight: bold;
+    color: #2E2E2E
+    }
 
-                th {
-                  border: 1px solid black;
-                }
+    th {
+    border: 1px solid black;
+    }
 
-                h3 {
-                  text-align:center;
-                  margin:3px
-                }
+    h3 {
+    text-align:center;
+    margin:3px
+    }
 
-                .license {
-                    width:40%
-                }
+    .license {
+    width:40%
+    }
 
-                .licenseName {
-                    width:30%
-                }
-                </style>
-  <body>
-    <table align='center'>
-      <tr>
+    .licenseName {
+    width:30%
+    }
+</style>
+<body>
+<table align='center'>
+    <tr>
         <th>
-          <h3>License</h3>
+            <h3>License</h3>
         </th>
         <th>
-          <h3>License (text URL)</h3>
+            <h3>License (text URL)</h3>
         </th>
         <th>
-          <h3>Dependency (source code URL)</h3>
+            <h3>Dependency (source code URL)</h3>
         </th>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td class='licenseName'>GPLv2 with Classpath exception</td>
-        <td class='license'>		
-		  <a href='http://www.gnu.org/licenses/gpl.html'>License agreement</a><p/>
-          <a href='http://www.gnu.org/software/classpath/license.html'>Classpath exception</a>
+        <td class='license'>
+            <a href='http://www.gnu.org/licenses/gpl.html'>License agreement</a>
+            <p/>
+            <a href='http://www.gnu.org/software/classpath/license.html'>Classpath exception</a>
         </td>
         <td class='dependencies'>
-          <ul>
-            <li><a href='https://github.com/bytedeco/javacpp-presets'>ffmpeg-2.8.1-1.1.jar</a></li>
-            <li><a href='https://github.com/bytedeco/javacpp'>javacpp-1.1.jar</a></li>
-          </ul>
+            <ul>
+                <li><a href='https://github.com/bytedeco/javacpp-presets'>ffmpeg-2.8.1-1.1.jar</a></li>
+                <li><a href='https://github.com/bytedeco/javacpp'>javacpp-1.1.jar</a></li>
+                <li><a href='http://www.ccextractor.org'>ccextractor / ccextractor.exe</a></li>
+            </ul>
         </td>
-      </tr>         
-      <tr>
+    </tr>
+    <tr>
         <td class='licenseName'>Common Development and Distribution License, Version 1 or later</td>
         <td class='license'>
-          <a href='http://opensource.org/licenses/CDDL-1.0'>License agreement</a>
+            <a href='http://opensource.org/licenses/CDDL-1.0'>License agreement</a>
         </td>
         <td class='dependencies'>
-          <ul>
-			<li><a href='https://github.com/enternoescape/cling'>cling-core-2.1.0-SNAPSHOT.jar</a></li>
-            <li><a href='https://github.com/4thline/seamless/tree/master/http'>seamless-http-1.1.0.jar</a></li>
-            <li><a href='https://github.com/4thline/seamless/tree/master/util'>seamless-util-1.1.0.jar</a></li>
-            <li><a href='https://github.com/4thline/seamless/tree/master/xml'>seamless-xml-1.1.0.jar</a></li>
-          </ul>
+            <ul>
+                <li><a href='https://github.com/enternoescape/cling'>cling-core-2.1.0-SNAPSHOT.jar</a></li>
+                <li><a href='https://github.com/4thline/seamless/tree/master/http'>seamless-http-1.1.0.jar</a></li>
+                <li><a href='https://github.com/4thline/seamless/tree/master/util'>seamless-util-1.1.0.jar</a></li>
+                <li><a href='https://github.com/4thline/seamless/tree/master/xml'>seamless-xml-1.1.0.jar</a></li>
+            </ul>
         </td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td class='licenseName'>The Apache Software License, Version 2.0</td>
         <td class='license'>
-          <a href='http://www.apache.org/licenses/LICENSE-2.0.txt'>License agreement</a>
+            <a href='http://www.apache.org/licenses/LICENSE-2.0.txt'>License agreement</a>
         </td>
         <td class='dependencies'>
-          <ul>
-            <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-core-2.3.jar</a></li>
-            <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-api-2.3.jar</a></li>
-			<li><a href='https://commons.apache.org/proper/commons-cli/download_cli.cgi'>commons-cli-1.3.jar</a></li>
-			<li><a href='https://github.com/java-native-access/jna'>jna-platform-4.2.1.jar</a></li>
-            <li><a href='https://github.com/java-native-access/jna'>jna-4.2.1.jar</a></li>
-          </ul>
+            <ul>
+                <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-core-2.3.jar</a></li>
+                <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-api-2.3.jar</a></li>
+                <li><a href='https://commons.apache.org/proper/commons-cli/download_cli.cgi'>commons-cli-1.3.jar</a></li>
+                <li><a href='https://github.com/java-native-access/jna'>jna-platform-4.2.1.jar</a></li>
+                <li><a href='https://github.com/java-native-access/jna'>jna-4.2.1.jar</a></li>
+            </ul>
         </td>
-      </tr>      
-    </table>
-  </body>
+    </tr>
+</table>
+</body>
 </html>
