--- a/distribution/licenses/Licenses by Dependency.html
+++ b/distribution/licenses/Licenses by Dependency.html
@@ -64,7 +64,7 @@
             <ul>
                 <li><a href='https://github.com/bytedeco/javacpp-presets'>ffmpeg-2.8.1-1.1.jar</a></li>
                 <li><a href='https://github.com/bytedeco/javacpp'>javacpp-1.1.jar</a></li>
-                <li><a href='http://www.ccextractor.org'>ccextractor / ccextractor.exe</a></li>
+                <li><a href='http://www.ccextractor.org'>ccextractor / ccextractorwin.exe</a></li>
             </ul>
         </td>
     </tr>
