Added NanoHttpd to gradle and licensing.

--- a/distribution/licenses/Licenses by Dependency.html
+++ b/distribution/licenses/Licenses by Dependency.html
@@ -97,6 +97,18 @@
             </ul>
         </td>
     </tr>
+	<tr>
+        <td class='licenseName'>NanoHttpd License</td>
+        <td class='license'>
+            <a href='https://github.com/NanoHttpd/nanohttpd/blob/master/LICENSE.md'>License agreement</a>
+        </td>
+        <td class='dependencies'>
+            <ul>
+                <li><a href='http://nanohttpd.org/nanohttpd/index.html'>nanohttpd-2.3.0.jar</a></li>
+                <li><a href='http://nanohttpd.org/nanohttpd-nanolets/index.html'>nanohttpd-nanolets-2.3.0.jar</a></li>
+            </ul>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
