--- a/distribution/licenses/Licenses by Dependency.html
+++ b/distribution/licenses/Licenses by Dependency.html
@@ -75,7 +75,7 @@
         </td>
         <td class='dependencies'>
             <ul>
-                <li><a href='https://github.com/enternoescape/cling'>cling-core-2.1.0-SNAPSHOT.jar</a></li>
+                <li><a href='https://github.com/4thline/cling/tree/master/core'>cling-core-2.1.0.jar</a></li>
                 <li><a href='https://github.com/4thline/seamless/tree/master/http'>seamless-http-1.1.0.jar</a></li>
                 <li><a href='https://github.com/4thline/seamless/tree/master/util'>seamless-util-1.1.0.jar</a></li>
                 <li><a href='https://github.com/4thline/seamless/tree/master/xml'>seamless-xml-1.1.0.jar</a></li>
@@ -94,6 +94,7 @@
                 <li><a href='https://commons.apache.org/proper/commons-cli/download_cli.cgi'>commons-cli-1.3.jar</a></li>
                 <li><a href='https://github.com/java-native-access/jna'>jna-platform-4.2.1.jar</a></li>
                 <li><a href='https://github.com/java-native-access/jna'>jna-4.2.1.jar</a></li>
+                <li><a href='https://github.com/google/gson'>gson-2.6.2.jar</a></li>
             </ul>
         </td>
     </tr>
